--- a/public/styles.css
+++ b/public/styles.css
@@ -98,6 +98,10 @@ main {
 .topBar h1 {
   display: inline-block; }
 
+.topBar h4 {
+  display: inline-block;
+  margin-left: 3%; }
+
 .icons a {
   width: 49%; }
 
