--- a/public/styles.css
+++ b/public/styles.css
@@ -73,8 +73,9 @@ main {
 
 .githublink {
   display: inline-block;
-  width: 8%;
-  float: right; }
+  width: 12%;
+  float: right;
+  margin-right: 8%; }
 
 .topGithubLink {
   display: inline-block;
