--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -81,8 +81,9 @@ main {
 }
 .githublink{
   display: inline-block;
-  width: 8%;
-  float: right;
+    width: 12%;
+    float: right;
+    margin-right: 8%;
 }
 .topGithubLink{
   display: inline-block;
