--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,11 @@
-main {
-  background-image: url("images/vintage_paper_background.jpg");
+body {
+  background-image: url("images/vintage_paper_background-min.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
-  height: 100%;
-  color: white; }
+  background-repeat: no-repeat; }
+
+main {
+  color: white;
+  margin-bottom: 5%; }
 
 .tileBox {
   min-height: 27em;
@@ -11,7 +13,7 @@ main {
   text-shadow: 1px 1px 2px black; }
 
 .tile {
-  border: 4px solid #92ced1;
+  border: 4px solid #3bffc1;
   color: rgba(255, 255, 255, 0); }
 
 .tile:hover {
@@ -26,7 +28,7 @@ main {
 
 .famFirst {
   min-height: 10em;
-  background-image: url("images/Family First.png");
+  background-image: url("images/Family First-min.png");
   background-size: cover;
   background-repeat: no-repeat; }
 
@@ -35,25 +37,25 @@ main {
 
 .apiTunes {
   min-height: 17em;
-  background-image: url("images/APItunes.jpg");
+  background-image: url("images/APItunes-min.jpg");
   background-size: cover;
   background-repeat: no-repeat; }
 
 .volunteer {
   min-height: 8em;
-  background-image: url("images/volunteer.png");
+  background-image: url("images/volunteer-min.png");
   background-size: cover;
   background-repeat: no-repeat; }
 
 .andFriend {
   min-height: 9em;
-  background-image: url("images/And Friend.png");
+  background-image: url("images/And Friend-min.png");
   background-size: cover;
   background-repeat: no-repeat; }
 
 .gridGrind {
   min-height: 9em;
-  background-image: url("images/Grid Grinder.png");
+  background-image: url("images/Grid Grinder-min.png");
   background-size: cover;
   background-repeat: no-repeat; }
 
@@ -62,7 +64,7 @@ main {
 
 .aboutContainer {
   background-color: rgba(206, 236, 236, 0.48);
-  height: 27em;
+  height: 30em;
   border-radius: 5px;
   padding: 1%;
   color: black; }
@@ -91,9 +93,11 @@ main {
   overflow: scroll; }
 
 .topBar {
-  text-shadow: 1px 1px 2px black; }
+  text-shadow: 1px 1px 2px black;
+  margin-bottom: 2%; }
 
 .topBar h3 {
+  margin-top: -2%;
   text-align: center; }
 
 .topBar h1 {
