--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,22 @@
-html {
-  background-image: url("images/vintage_paper_background-min.jpg");
-  background-size: cover;
-  background-repeat: no-repeat; }
-
 body {
-  background-color: transparent; }
+  background-image: url("images/folly-beach-pier-sc1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0px -110px;
+  background-attachment: fixed; }
 
-main {
-  background-color: transparent;
+.contentProjects {
+  background-color: #032d63;
   color: white;
-  margin-bottom: 5%; }
+  padding: 2%;
+  overflow: auto; }
+
+.spacing {
+  background-color: rgba(41, 16, 16, 0.54);
+  height: 300px;
+  padding: 16% 0% 2% 5%;
+  color: white;
+  z-index: 1; }
 
 .tileBox {
   min-height: 27em;
@@ -67,7 +74,7 @@ main {
   display: none; }
 
 .aboutContainer {
-  background-color: rgba(206, 236, 236, 0.48);
+  background-color: #ceecec;
   height: 30em;
   border-radius: 5px;
   padding: 1%;
@@ -96,13 +103,15 @@ main {
   max-height: 100%; }
 
 .topBar {
+  background-color: #032d63;
   text-shadow: 1px 1px 2px black;
-  margin-bottom: 2%; }
+  /* margin-bottom: 2%; */
+  color: white;
+  padding: 1% 3% 0% 3%; }
 
 .topBar h3 {
   margin-top: -2%;
   text-align: center;
-  margin-top: -2%;
   font-style: italic; }
 
 .topBar h1 {
@@ -119,3 +128,6 @@ main {
   float: right;
   margin-right: 15%;
   width: 8%; }
+
+.myPic {
+  display: inline-block; }
