--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,23 +1,30 @@
 
-html{
-  background-image: url("images/vintage_paper_background-min.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-body{
-  background-color: transparent;
-}
-
-main {
-  // background-image: url("images/vintage_paper_background-min.jpg");
-  // background-size: cover;
-  // background-repeat: no-repeat;
-  // height: 100%;
-  background-color: transparent;
-  color: white;
-  margin-bottom: 5%;
+// html{
+//   background-image: url("images/vintage_paper_background-min.jpg");
+//   background-size: cover;
+//   background-repeat: no-repeat;
+// }
+body {
+    background-image: url("images/folly-beach-pier-sc1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0px -110px;
+    background-attachment:fixed;
 }
 
+.contentProjects {
+  background-color: #032d63;
+    color: white;
+    // height: 600px;
+    padding: 2%;
+    overflow: auto;
+}
+.spacing {
+background-color: rgba(41, 16, 16, 0.54);  height: 300px;
+padding: 16% 0% 2% 5%;
+    color: white;
+    z-index: 1;
+}
 .tileBox{
   // border: 2px solid white;
   min-height: 27em;
@@ -81,12 +88,11 @@ border: 4px solid rgb(59, 255, 193);
   display: none;
 }
 .aboutContainer{
-  background-color: rgba(206, 236, 236, 0.48);
+  background-color: rgb(206, 236, 236);
     height: 30em;
     border-radius: 5px;
     padding: 1%;
     color: black;
-
 }
 .techStack img{
   width: 10%;
@@ -112,14 +118,15 @@ border: 4px solid rgb(59, 255, 193);
   max-height: 100%;
 }
 .topBar{
-  text-shadow: 1px 1px 2px black;
-
-  margin-bottom: 2%;
+    background-color: #032d63;
+    text-shadow: 1px 1px 2px black;
+    /* margin-bottom: 2%; */
+    color: white;
+    padding: 1% 3% 0% 3%;
 }
 .topBar h3{
   margin-top: -2%;
   text-align: center;
-  margin-top: -2%;
   font-style: italic;
 }
 .topBar h1{
@@ -136,4 +143,7 @@ border: 4px solid rgb(59, 255, 193);
   float: right;
     margin-right: 15%;
     width: 8%;
+}
+.myPic{
+  display: inline-block;
 }
