fixed a few things

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -88,11 +88,12 @@ border: 4px solid rgb(59, 255, 193);
   display: none;
 }
 .aboutContainer{
-  background-color: rgb(206, 236, 236);
+    background-color: rgb(206, 236, 236);
     height: 30em;
     border-radius: 5px;
     padding: 1%;
     color: black;
+    height:auto;
 }
 .techStack img{
   width: 10%;
